--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -27,7 +27,7 @@
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Cat:"
+           android:text="Category:"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"
@@ -42,7 +42,7 @@
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="example category:"
+           android:text="no category"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textStyle="bold"
-           android:text="Created At"
+           android:text="Updated At"
            app:layout_constraintTop_toBottomOf="@+id/text_created_at"
            app:layout_constraintStart_toStartOf="parent" />
 
