--- a/app/src/main/res/layout/fragment_search_joke.xml
+++ b/app/src/main/res/layout/fragment_search_joke.xml
@@ -3,6 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/recycler_view"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/search_layout" />
+
+        <include layout="@layout/recycler_view"/>
+
+    </LinearLayout>
 
 </FrameLayout>
